# lmxml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: on_commit.yml  on_release.yml
lmxml/: __init__.py  _dump.py  _impl.py
tests/: test_lmxml.py
