[project]
name = "lmxml"
description = "TODO"
readme = "README.md"
requires-python = ">=3.10" #todo safe default, but make sure we cannot support earlier versions
license = { text = "MIT" }

authors = [
  { name = "Filip Malczak", email = "filip.malczak@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
]

dynamic = ["version"]



[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
]

[tool.pytest.ini_options]
# Produce both human-readable and machine-readable reports
addopts = "--html=report.html --self-contained-html --junitxml=report.xml"


[project.urls]
Homepage = "https://github.com/FilipMalczak/lmxml"
Repository = "https://github.com/FilipMalczak/lmxml"
Issues = "https://github.com/FilipMalczak/lmxml/issues"

[build-system]
requires = [
  "hatchling>=1.22",
  "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"


[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["lmxml"]
